k8s/cms-server/cms-webpage.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "cms-webpage"
  labels:
    app: "cms-webpage"
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: "cms-webpage"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "cms-webpage"
  labels:
    app: "cms-webpage"
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: "cms-webpage"
  template:
    metadata:
      labels:
        app: "cms-webpage"
    spec:
      containers:
      - name: "cms-webpage"
        image: "gcr.io/awesome-238003/awesome-cms-webpage:v2019.09.14.1"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 1
          periodSeconds: 15   
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cms-awesome.anhminhltd.com
spec:
  hosts:
  - "cms-awesome.anhminhltd.com"
  gateways:
  - awesome-gateway
  http:
  - route:
    - destination:
        host: cms-webpage
    retries:
      attempts: 3
      perTryTimeout: 3s
